# tgapp

./: .gitignore  DEPLOY_GUIDE.md  DOMAIN_SETUP.md  MOBILE_OPTIMIZATION.md  PLAN.txt  PLAN3.txt  README.md  Services.tsx  Spa.tsx  SpaServiceDetail.tsx  deploy-github-pages.sh  docker-compose.yml  info.txt  info_two.txt  menu.txt  menu_two.txt  performance-report.md  plan2.txt  telegram-compatibility.md  testing-checklist.md
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  poetry.toml  pyproject.toml
apps/api/app/: main.py
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/public/data/: hotel.json  menu-full.json  menu.json  restaurant-images.json  room-images.json  spa-images.json
apps/web/src/: main.tsx
apps/web/src/app/: App.tsx  router.tsx
apps/web/src/hooks/: index.ts  useDevicePerformance.ts  useHapticFeedback.ts  useIntersectionObserver.ts
apps/web/src/lib/: utils.ts
apps/web/src/pages/: Home.tsx  Menu.tsx  Profile.tsx  RestaurantDetail.tsx  (+6 more)
memory-bank/: activeContext.md  creative-plan3.md  creative-session.md  detailed-plan.md  plan-summary.md  style-guide.md  tasks.md
raddisson-tg-app-main/: .dockerignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json
raddisson-tg-app-main/.github/workflows/: main.yml
raddisson-tg-app-main/src/: App.js  fonts.css
scripts/: enhance-menu-with-dietary.js  generate-restaurant-images.js  generate-room-images.js  generate-spa-images.js  parse-hotel-info.js  parse-menu.js
(+29 files in other folders)
